--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,14 +12,11 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <!-- <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div> -->
+  <div *ngIf="winner">Player {{winner}} won the game!</div>
+  <h1>Current Player: {{player}}</h1>
 <div class="grid-container">
   <ion-button  class="grid-item" expand="block" fill="solid"  *ngFor="let item of this.grid, index as id" (click)="presentPopover($event, id)">
-    {{item.position}}
+    <!-- {{item.position}} -->
     <!-- Last State -->
     <!-- <p *ngIf="dataReturned && item.position === dataReturned.id" [ngStyle]="{'font-size': (dataReturned.item* 15) + 'px'}">x</p> -->
     <!-- <p *ngIf="dataReturned && item.id === dataReturned.id; else lastState" [ngStyle]="{'font-size': (dataReturned.item* 15) + 'px'}">x</p> -->
@@ -27,13 +24,17 @@
       <p *ngIf="item.lastState && item.lastState.position === id" [ngStyle]="{'font-size': (item.lastState.size* 15) + 'px'}">{{item.lastState.letter}}</p>
 
   </ion-button >
+  <!-- <app-squares *ngFor="let val of this.grid; let i = index" [value]='val.position'></app-squares> -->
 </div>
 
 <div class="grid-container">
   <div>
     <h2>Player</h2>
-    <h2 *ngFor="let item of sizes; index as id">(x,{{item}})</h2>
+    <h2 class="grid" *ngFor="let item of sizes; index as id">(x,{{item}})</h2>
   </div>
+  <ion-button (click)="resetGame()" expand="block" fill="solid" shape="round">
+    Reset Game
+  </ion-button>
 </div>
 
 
